13-secflow-service/00-secflow-00-02-platform-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secflow-ingress
  namespace: secflow-ns
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10240m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-set-headers: |
      Upgrade $http_upgrade;
      Connection "upgrade";
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/websocket-services: "secflow-platform-agent"
spec:
  ingressClassName: nginx
  rules:
    - host: secflow.sothothv2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-frontend
                port:
                  number: 80
          - path: /api/menu
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-menu
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-auth
                port:
                  number: 80
          - path: /api/agent
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-agent
                port:
                  number: 80
          - path: /api/project
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-project
                port:
                  number: 80
          - path: /api/configcenter
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-configcenter
                port:
                  number: 80
          - path: /api/resource
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-resource
                port:
                  number: 80
          - path: /api/fileserver
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-fileserver
                port:
                  number: 80
          - path: /api/packages
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-static-binary
                port:
                  number: 80
          - path: /api/deploy-script
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-deploy-script
                port:
                  number: 80
          - path: /api/k8s
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-k8s
                port:
                  number: 80
          - path: /api/workflow
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-workflow
                port:
                  number: 80
          - path: /api/vuln
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-vuln
                port:
                  number: 80
          - path: /api/system-analysis
            pathType: Prefix
            backend:
              service:
                name: secflow-platform-system-analysis
                port:
                  number: 80
          - path: /api/app/code-server
            pathType: Prefix
            backend:
              service:
                name: secflow-app-code-server
                port:
                  number: 80
  tls:
    - hosts:
        - secflow.sothothv2.com
      secretName: wildcard-sothothv2.com-tls
